# NN_Test

./: .gitignore  README.md
data/images/: labels.txt
demo/DatasetToImage/: DatasetToImaage.cpp  funset.cpp
demo/Math/: common.hpp  funset.cpp  funset.hpp  test_Math.cpp
demo/NN/: funset.cpp  funset.hpp  libsvm.cpp  monocular_ranging.cpp  opencv.cpp  pca.cpp  test_NN.cpp  test_ollama.cpp  yolo.cpp  yolo.hpp
demo/Python/: csdn.jsonl  prompt_engineering.modelfile  requirements.txt  test_alexnet.py  test_bilstm_classify.py  test_bilstm_regression.py  test_classify.py  test_classify_custom_cnn.py  test_eiseg2yolov8_segment.py  test_image_op.py  test_image_similarity_algorithms.py  test_labelme2coco_CocoDataset.py  test_labelme2yolov8_detect.py  test_learning_rate_warmup.py  test_mediapipe_midas_face_monocular_ranging.py  test_model_knowledge_distillation.py  test_model_pruning_pytorch.py  test_model_pruning_torch-pruning.py  test_model_quantization_ptq.py  test_ollama_rag.py  test_ollama_rag_sentence-transformers.py  test_ollama_sync.py  test_paddleocr.py  test_parse_csv.py  test_parse_json.py  test_parse_txt.py  test_quaternion.py  test_rag_langchain.py  test_regression_custom_cnn.py  test_safetensors.py  test_scipy_minimize.py  test_set_seed.py  test_torchmetrics.py  test_transformers_detect_model_convert_to_onnx.py  test_transformers_pipeline.py  test_transformers_train_object_detect.py  test_txt_to_csv_convert.py  test_video_op.py  test_video_to_images.py  test_xgboost.py  (+8 more)
demo/Python/decision_tree/: test_decision_tree_classification.py
demo/Python/k-means/: test_k-means_1.py
demo/Python/utils/: __init__.py  fit.py  random_remove_files.py  split_classify_dataset.py  split_regression_dataset.py
demo/TensorRT_Infer/: TensorRT_Infer.cpp  funset.cpp  funset.hpp
demo/tiny-cnn/: funset.cpp
demo/tiny-dnn/: funset.cpp  funset.hpp  test_tiny-dnn.cpp
prj/linux_cmake_DatasetToImage/: CMakeLists.txt  build.sh
prj/linux_cmake_Math/: CMakeLists.txt  build.sh
prj/linux_cmake_NN/: CMakeLists.txt  build.sh
prj/linux_cmake_tiny-cnn/: CMakeLists.txt  build.sh
prj/linux_cmake_tiny-dnn/: CMakeLists.txt  build.sh
prj/x86_x64_vc12/: NN.sln
prj/x86_x64_vc12/DatasetToImage/: DatasetToImage.vcxproj
prj/x86_x64_vc12/Math/: Math.vcxproj
prj/x86_x64_vc12/NN/: NN.vcxproj  NN.vcxproj.filters
prj/x86_x64_vc12/TensorRT_Infer/: TensorRT_Infer.vcxproj  TensorRT_Infer.vcxproj.filters
prj/x86_x64_vc12/tiny-cnn/: tiny-cnn.vcxproj
prj/x86_x64_vc12/tiny-dnn/: tiny-dnn.vcxproj
src/: version.txt
src/NN/: BP.cpp  BP.hpp  CNN.cpp  CNN.hpp  batch_normalization.cpp  batch_normalization.hpp  common.cpp  common.hpp  logistic_regression2.cpp  logistic_regression2.hpp  lrn.cpp  lrn.hpp  naive_bayes_classifier.hpp  single_hidden_layer.cpp
